--- a/classes/les_cc/makefile
+++ b/classes/les_cc/makefile
@@ -1,30 +1,30 @@
 Data: Universite.o Ressource.o Salle.o Matiere.o Groupe.o Filiere.o Enseignant.o EDT.o Cours.o
  
-Universite.o: Universite.cc Universite.h
+Universite.o: Universite.cc
 	g++ -Wall -c Universite.cc
 	
-Salle.o: Salle.cc Salle.h
+Salle.o: Salle.cc 
 	g++ -Wall -c Salle.cc	
 	
-Ressource.o: Ressource.cc Ressource.h
+Ressource.o: Ressource.cc 
 	g++ -Wall -c Ressource.cc
 	
-Matiere.o: Matiere.cc Matiere.h
+Matiere.o: Matiere.cc 
 	g++ -Wall -c Matiere.cc
 	
-Groupe.o: Groupe.cc Groupe.h
+Groupe.o: Groupe.cc
 	g++ -Wall -c Groupe.cc
 	
-Filiere.o: Filiere.cc Filiere.h
+Filiere.o: Filiere.cc
 	g++ -Wall -c Filiere.cc
 	
-Enseignant.o: Enseignant.cc Enseignant.h
+Enseignant.o: Enseignant.cc
 	g++ -Wall -c Enseignant.cc
 	
-EDT.o: EDT.cc EDT.h
+EDT.o: EDT.cc
 	g++ -Wall -c EDT.cc
 	
-Cours.o: Cours.cc Cours.h
+Cours.o: Cours.cc
 	g++ -Wall -c Cours.cc
 
 clean: 
